# QtQQ

./: .gitignore  CMakeLists.txt  QtQQ.sln  README.md
QtQQ/: BasicWindow.cpp  BasicWindow.h  CCMainWindow.cpp  CCMainWindow.h  CCMainWindow.qrc  CCMainWindow.ui  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  ContactItem.cpp  ContactItem.h  ContactItem.ui  CustomMenu.cpp  CustomMenu.h  EmotionLabelItem.cpp  EmotionLabelItem.h  EmotionWindow.cpp  EmotionWindow.h  NotifyManager.cpp  NotifyManager.h  QClickLabel.cpp  QClickLabel.h  QtQQ.vcxproj  QtQQ.vcxproj.filters  RootContactItem.cpp  RootContactItem.h  SkinWindow.cpp  SkinWindow.h  SkinWindow.ui  SysTray.cpp  SysTray.h  TalkWindow.cpp  TalkWindow.h  TalkWindow.ui  TalkWindowItem.cpp  TalkWindowItem.h  TalkWindowShell.cpp  TalkWindowShell.h  TalkWindowShell.ui  TitleBar.cpp  (+7 more)
